according to Burkhard use /var/scratch instead of /tmp

--- a/JHaaS/Snakefile
+++ b/JHaaS/Snakefile
@@ -76,7 +76,7 @@ rule download_sra_PE:
     ' && export https_proxy="{params.proxy}" 2>> {log}'
     ' && export ftp_proxy="{params.proxy}" 2>> {log}'
     ' && tmp=`mktemp -d` 2>> {log}'
-    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp -t /tmp/ 2>> {log}'
+    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp -t /var/scratch/ 2>> {log}'
     ' && md5sum -c <<<"{params.md5r1} `readlink -f $tmp/*_1.fastq`" 2>> {log} 1>&2'
     ' && md5sum -c <<<"{params.md5r2} `readlink -f $tmp/*_2.fastq`" 2>> {log} 1>&2'
     ' && mkdir -p `dirname {output.r1}` 2>> {log}'
@@ -107,7 +107,7 @@ rule download_sra_SE:
     ' && export https_proxy="{params.proxy}" 2>> {log}'
     ' && export ftp_proxy="{params.proxy}" 2>> {log}'
     ' && tmp=`mktemp -d` 2>> {log}'
-    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp -t /tmp/ 2>> {log}'
+    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp -t /var/scratch/ 2>> {log}'
     ' && md5sum -c <<<"{params.md5} `readlink -f $tmp/*.fastq`" 2>> {log} 1>&2'
     ' && cat $tmp/*.fastq | gzip -k -9 -c > {output} 2>> {log}'
     ' && rm -rf $tmp 2>> {log}'
