--- a/JHaaS/Snakefile
+++ b/JHaaS/Snakefile
@@ -63,7 +63,7 @@ rule download_sra_PE:
     file='|'.join([name for name, item in config['downloads'].items() if 'type' in item.keys() and item['type'] == 'SRA_PE'])
   resources:
     ntasks="2",
-    mem_mb="4000"
+    mem_mb="6000"
   conda:
     "NGS/env_ngs.yaml"
   params:
@@ -75,8 +75,8 @@ rule download_sra_PE:
     'export http_proxy="{params.proxy}" 2> {log}'
     ' && export https_proxy="{params.proxy}" 2>> {log}'
     ' && export ftp_proxy="{params.proxy}" 2>> {log}'
-    ' && tmp=`mktemp -d` 2>> {log}'
-    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp -t /var/scratch/ 2>> {log}'
+    ' && tmp=`mktemp -d -p /var/scratch/ || mktemp -d` 2>> {log}'
+    ' && fasterq-dump --force {params.url} --format fastq --skip-technical --threads {resources.ntasks} --mem {resources.mem_mb}MB --progress --outdir $tmp --temp /var/scratch/ 2>> {log}'
     ' && md5sum -c <<<"{params.md5r1} `readlink -f $tmp/*_1.fastq`" 2>> {log} 1>&2'
     ' && md5sum -c <<<"{params.md5r2} `readlink -f $tmp/*_2.fastq`" 2>> {log} 1>&2'
     ' && mkdir -p `dirname {output.r1}` 2>> {log}'
@@ -106,8 +106,8 @@ rule download_sra_SE:
     'export http_proxy="{params.proxy}" 2> {log}'
     ' && export https_proxy="{params.proxy}" 2>> {log}'
     ' && export ftp_proxy="{params.proxy}" 2>> {log}'
-    ' && tmp=`mktemp -d` 2>> {log}'
-    ' && fasterq-dump -f {params.url} -F fastq --skip-technical -e {resources.ntasks} -p -O $tmp -t /var/scratch/ 2>> {log}'
+    ' && tmp=`mktemp -d -p /var/scratch/ || mktemp -d` 2>> {log}'
+    ' && fasterq-dump --force {params.url} --format fastq --skip-technical --threads {resources.ntasks} --mem {resources.mem_mb}MB --progress --outdir $tmp --temp /var/scratch/ 2>> {log}'
     ' && md5sum -c <<<"{params.md5} `readlink -f $tmp/*.fastq`" 2>> {log} 1>&2'
     ' && cat $tmp/*.fastq | gzip -k -9 -c > {output} 2>> {log}'
     ' && rm -rf $tmp 2>> {log}'
